# power-meter

./: .env.example  .gitignore  README.md  compose.yml  docker-compose.yml
.power_meter/eon/: token.json
config/: source_config.json
docker/influxdb/: docker-compose.yml
ingest/: Dockerfile  requirements.txt
ingest/src/ingest/: config.py  influx.py  logging_setup.py  main.py  pyproject.toml
ingest/src/ingest/eon/: client.py
ingest/src/ingest/influx/: influx.py  reader.py  writer.py
ingest/src/ingest/jobs/: batch_load.py  daily.py  debug_eon.py  loader.py  regular_feed.py  smoke_write.py  test_auth.py
state/: state.json
